# ai-mplayer

./: $null  .gitignore  AGENTS.md  API.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  COPYRIGHT  DEBUG_GUIDE.md  DEVELOPMENT.md  DISCLAIMER.md  DOCUMENTATION_SUMMARY.md  DRAGDROP_TEST.md  FINAL_SETUP.md  FINAL_TEST.md  LIBMPV_INTEGRATION_GUIDE.md  LIBMPV_INTEGRATION_PLAN.md  LIBMPV_PHASE1.md  LIBMPV_REAL_INTEGRATION.md  LIBMPV_SETUP.md  LICENSE  MPV_INTEGRATION_SUMMARY.md  PLAYER_FIX.md  PRIVACY.md  PROJECT_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_TEST.md  README.md  README_DOCS.md  SECURITY.md  SETUP_COMPLETE.md  TAURI_TEST_PHASE1.md  TAURI_WINDOW_MODE.md  THIRD_PARTY_LICENSES.md  TROUBLESHOOTING.md  index.html  package-lock.json  (+7 more)
scripts/: copy-dlls.js  switch-player.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Cargo.toml.html5  Cargo_mpv.toml  Cargo_simple.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: main.rs  main.rs.html5  main_mpv.rs  main_mpv_player.rs  main_simple.rs
src/components/: ControlBar.tsx  DanmakuRenderer.tsx  FormatWarningModal.tsx  HelpOverlay.tsx  Player.tsx  PlayerSimple.tsx  (+2 more)
test_audio_device/: Cargo.toml
test_audio_only/: Cargo.toml
test_logging/: Cargo.toml
test_logging_simple/: Cargo.toml
test_mpv/: Cargo.toml
test_mpv_audio/: Cargo.toml
test_mpv_load/: Cargo.toml
test_mpv_simple/: Cargo.toml
test_release_audio/: Cargo.toml
test_working_dir/: Cargo.toml
(+31 files in other folders)
